cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)

project(POSH)

SET(POSH_MAJOR_VERSION 1)
SET(POSH_MINOR_VERSION 3)
SET(POSH_PATCH_VERSION 002)

SET(POSH_VERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.${POSH_PATCH_VERSION})
SET(POSH_COMPATIBILITY_VERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.0)
SET(POSH_SOVERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.0)

set(POSH_source
    posh.c
)

SET(POSH_LIBRARY_NAME Posh)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../)
set(LIBRARY_OUTPUT_PATH  ../../lib)

SOURCE_GROUP("POSH" FILES ${POSH_source})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(POSH STATIC ${POSH_source})

IF(UNIX)
	SET_TARGET_PROPERTIES(POSH PROPERTIES
		VERSION ${POSH_VERSION}
		SOVERSION ${POSH_SOVERSION}
	)

    set(CMAKE_CXX_FLAGS -fPIC)

ENDIF(UNIX)

set_target_properties(POSH PROPERTIES SOLUTION_FOLDER Dependencies)
