cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)

project(POSH)

set(POSH_MAJOR_VERSION 1)
set(POSH_MINOR_VERSION 3)
set(POSH_PATCH_VERSION 002)

set(POSH_VERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.${POSH_PATCH_VERSION})
set(POSH_COMPATIBILITY_VERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.0)
set(POSH_SOVERSION ${POSH_MAJOR_VERSION}.${POSH_MINOR_VERSION}.0)

set(POSH_source
    posh.c
)

set(POSH_LIBRARY_NAME Posh)
set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/lib)

source_group("POSH" FILES ${POSH_source})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(POSH STATIC ${POSH_source})

if(UNIX)
	set_target_properties(POSH PROPERTIES
		VERSION ${POSH_VERSION}
		SOVERSION ${POSH_SOVERSION}
	)

    set(CMAKE_CXX_FLAGS -fPIC)

ENDIF(UNIX)

set_target_properties(POSH PROPERTIES SOLUTION_FOLDER Dependencies)
