project(SQLITE)
cmake_policy(SET CMP0003 NEW)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../)

FILE(GLOB_RECURSE SQLITE_source ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
SOURCE_GROUP("SQLite" FILES ${SQLITE_source})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(SQLite STATIC ${SQLITE_source})