cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)

project(SQLITE)

SET(SQLITE_MAJOR_VERSION 3)
SET(SQLITE_MINOR_VERSION 7)
SET(SQLITE_PATCH_VERSION 11)

SET(SQLITE_VERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.${SQLITE_PATCH_VERSION})
SET(SQLITE_COMPATIBILITY_VERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.0)
SET(SQLITE_SOVERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.0)

set(SQLITE_source
    shell.c
    sqlite3.c
)

SET(SQLITE_LIBRARY_NAME SQLite)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../)
set(LIBRARY_OUTPUT_PATH  ../../lib)

SOURCE_GROUP("SQLite" FILES ${SQLITE_source})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(SQLite STATIC ${SQLITE_source})

IF(UNIX)
	SET_TARGET_PROPERTIES(SQLite PROPERTIES
		VERSION ${SQLITE_VERSION}
		SOVERSION ${SQLITE_SOVERSION}
	)

    set(CMAKE_CXX_FLAGS -fPIC)

ENDIF(UNIX)

set_target_properties(SQLite PROPERTIES SOLUTION_FOLDER Dependencies)

