cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0003 NEW)

project(SQLITE)

set(SQLITE_MAJOR_VERSION 3)
set(SQLITE_MINOR_VERSION 7)
set(SQLITE_PATCH_VERSION 11)

set(SQLITE_VERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.${SQLITE_PATCH_VERSION})
set(SQLITE_COMPATIBILITY_VERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.0)
set(SQLITE_SOVERSION ${SQLITE_MAJOR_VERSION}.${SQLITE_MINOR_VERSION}.0)

set(SQLITE_source
    sqlite3.c
)

set(SQLITE_LIBRARY_NAME SQLite)
set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/lib)

source_group("SQLite" FILES ${SQLITE_source})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(SQLite STATIC ${SQLITE_source})

if(UNIX)
	set_target_properties(SQLite PROPERTIES
		VERSION ${SQLITE_VERSION}
		SOVERSION ${SQLITE_SOVERSION}
	)

    set(CMAKE_CXX_FLAGS -fPIC)

ENDIF(UNIX)

set_target_properties(SQLite PROPERTIES SOLUTION_FOLDER Dependencies)
target_link_libraries(SQLite dl)
